# rwatch

./: .dockerignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.agent  IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  README.md  RUST_BEST_PRACTICES.md
.github/workflows/: build-and-push.yml  main.yml
.planning/: ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STACK.md
agent/: Cargo.toml
agent/src/: health.rs  main.rs  memory.rs
agent/src/dummy/: data.rs  handlers.rs  mod.rs  state.rs
agent/src/metrics/: error.rs  mod.rs  nodes.rs  pods.rs  resource.rs  summary.rs
client/: Cargo.toml
client/src/: agent.rs  discovery.rs  lib.rs
common/: Cargo.toml
common/src/: health.rs  lib.rs  memory.rs  memory_display.rs  metrics.rs
deploy/k8s/: 01-namespace.yaml  02-daemonset.yaml  03-service.yaml  04-configmap.yaml  05-rbac.yaml  06-tui-deployment.yaml  kustomization.yaml
tui/: Cargo.toml
tui/src/: main.rs  ui.rs
