[package]
name = "rwatch-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Agent-specific dependencies
axum = "0.7"
tower = "0.5"  # Useful for middleware in future iterations

# Internal dependency - note the path-based reference
rwatch-common = { path = "../common" }

# Kubernetes client libraries
kube = { version = "0.98", features = ["client", "runtime", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# For resource quantity parsing
thiserror = "1.0"

# For timestamps
chrono = "0.4"

# For CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# For generating random dummy data
rand = "0.8"
