[package]
name = "rwatch-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Client-specific dependencies
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

# Internal dependency
rwatch-common = { path = "../common" }
