[package]
name = "rwatch-common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Using workspace dependencies ensures version consistency
serde = { workspace = true }
serde_json = { workspace = true }

# For timestamps
chrono = { version = "0.4", features = ["serde"] }
