[package]
name = "rwatch-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# TUI-specific dependencies
reqwest = { version = "0.12", features = ["json"] }

# Internal dependency
rwatch-common = { path = "../common" }
