[package]
name = "rwatch-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Internal dependencies
rwatch-common = { path = "../common" }
rwatch-client = { path = "../client" }
